calico-policies/public-network-isolation/au-syd/allow-egress-pods-public.yaml
# This policy opens port 53 for DNS (5353 for OpenShift 4.3 and later),
# port 2049 for communication with NFS file servers, ports 443 and 3260
# for communication to block storage, 10250 for VPN pod, and
# port 2040 and 443 on 172.21.0.1 for the master API server local proxy.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-public
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      nets:
      # Nets for AP South: mel01, syd01, syd04, syd05
      - 130.198.64.19/32
      - 130.198.66.26/32
      - 130.198.102.82/32
      - 135.90.66.2/32
      - 168.1.8.195/32
      - 168.1.12.98/32
      - 168.1.58.66/32
      - 168.1.71.178/32
      - 168.1.97.67/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for AP South: mel01, syd01, syd04, syd05
      - 130.198.64.19/32
      - 130.198.66.26/32
      - 130.198.102.82/32
      - 135.90.66.2/32
      - 168.1.8.195/32
      - 168.1.12.98/32
      - 168.1.58.66/32
      - 168.1.71.178/32
      - 168.1.97.67/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
