calico-policies/public-network-isolation/au-syd/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ap-south: syd01, syd04, syd05
      - 130.198.102.82/32
      - 130.198.64.19/32
      - 130.198.66.26/32
      - 130.198.79.170/32
      - 130.198.83.34/32
      - 135.90.66.2/32
      - 135.90.68.114/32
      - 135.90.69.66/32
      - 135.90.69.82/32
      - 135.90.89.234/32
      - 168.1.12.98/32
      - 168.1.39.34/32
      - 168.1.58.66/32
      - 168.1.6.106/32
      - 168.1.8.195/32
      - 104.94.220.125/32
      - 104.94.221.125/32
      - 104.94.222.133/32
      - 104.94.223.133/32
      - 104.96.176.125/32
      - 104.96.177.125/32
      - 104.96.178.127/32
      - 104.96.179.127/32
      - 104.96.180.124/32
      - 104.96.181.124/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ap-south: syd01, syd04, syd05
      - 130.198.102.82/32
      - 130.198.64.19/32
      - 130.198.66.26/32
      - 130.198.79.170/32
      - 130.198.83.34/32
      - 135.90.66.2/32
      - 135.90.68.114/32
      - 135.90.69.66/32
      - 135.90.69.82/32
      - 135.90.89.234/32
      - 168.1.12.98/32
      - 168.1.39.34/32
      - 168.1.58.66/32
      - 168.1.6.106/32
      - 168.1.8.195/32
      - 104.94.220.125/32
      - 104.94.221.125/32
      - 104.94.222.133/32
      - 104.94.223.133/32
      - 104.96.176.125/32
      - 104.96.177.125/32
      - 104.96.178.127/32
      - 104.96.179.127/32
      - 104.96.180.124/32
      - 104.96.181.124/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
