calico-policies/public-network-isolation/au-syd/allow-public-services.yaml
# This policy allows outgoing network traffic from worker nodes to other IBM Cloud services.
# The example nets and ports in this policy are for IBM Cloud Container Registry, IBM Cloud
# IBM Cloud Monitoring, IBM Cloud Logs, and the managed Istio add-on.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 169.60.98.80/29
      - 169.62.37.240/29
      - 169.63.104.232/29
      - 169.47.153.160/28
      - 103.41.69.127/32
      - 103.41.69.114/32
      - 103.41.69.115/32
      # IBM Cloud Container Registry: AP South nets for your own registry
      - 168.1.1.240/29
      - 130.198.88.128/29
      - 135.90.66.48/29
      - 103.41.70.135/32
      - 103.41.70.139/32
      - 103.41.70.141/32
      - 103.41.70.142/32
      - 103.41.70.157/32
      - 103.41.70.158/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring: au-syd
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints
      - 135.90.73.100/32
      - 130.198.80.155/32
      - 168.1.213.78/32
      # backup pools IBM Cloud Monitoring: AU Syd nets
      - 130.198.79.42/32
      - 130.198.89.46/32
      - 135.90.70.74/32
      - 135.90.70.77/32
      - 168.1.30.131/32
      - 168.1.38.93/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: AU Syd nets
      - 130.198.89.43/32
      - 130.198.89.45/32
      - 135.90.67.187/32
      - 135.90.70.75/32
      - 168.1.38.90/32
      - 168.1.38.92/32
      # New IP Addresses added on 1/13/2023
      - 135.90.92.246/32
      - 130.198.1.212/32
      - 135.90.89.221/32
      # End new IP address list
      # CIDR Blocks added on 7/26/2023
      - 130.198.83.0/27
      - 130.198.92.144/28
      - 135.90.82.32/27
      - 135.90.90.240/28
      - 168.1.31.192/27
      - 168.1.40.48/28
      # End CIDR Blocks
      ports:
      - 443
      - 80
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Egress gateway
      - 80
      - 15443
    protocol: TCP
    source: {}
  ingress:
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Ingress gateway and istiod control plane
      - 443
      - 853
      - 15010
      - 15012
      - 15014
      # Managed Istio add-on: Knative cluster local gateway
      - 80
      - 15021
      - 15443
    protocol: TCP
    source: {}
  order: 1800
  selector: ibm.role == 'worker_public'
  types:
  - Egress
  - Ingress
